   
   o  Small changes.
   
Version 1.4-8

   o  Export data set now allows an arbitrary field separator (suggested by Marilia Sa Carvalho).
   
   o  Menus can now use translation files supplied by plug-ins.
   
   o  Path names with apostrophes should no longer produce an "unbalanced parentheses" error.
   
   o  Added files for Debian Linux (from Pietro Battiston and Dirk Eddelbuettel).
	
   o  Small changes.
   
Version 1.4-9

   o  Upated Russian translation (courtesy of Alexey Shipunov).
   
   o  Fixed bug in BreuschPaganTest() that prevented dialog from functioning (reported by Michel Pouchain).
   
Version 1.4-10

   o  Corrected problem in paste in Command window in non-Windows systems (reported by Liviu Andronic).
   
   o  Fixed handling of X11 warnings which was disrupted by showData(), and added check for "Warning in structure" (problems reported by Liviu Andronic).
   
   o  Prefixes used when output is directed to the R console are no longer hard-coded, but can be set by the "prefixes" Rcmdr option (to satisfy a request by Liviu Andronic).

Version 1.4-11

   o  Correction to .mo file for Brazilian Portuguese translation (supplied by Adriano Azevedo-Filho following report by Donald Pianto).
   
   o  Added summary() output to principal components (suggested by Liviu Andronic).
   
Version 1.5-0

   o  Added model-selection dialogs, stepwise and subset (several requests).
   
   o  Modifications to model-definition dialogs (suggested by Ulrike Gromping).
   
   o  The compare-models and Anova-table code for GLMs now uses F-tests when the dispersion parameter is estimated (after a suggstion by Ulrich Halekoh).
   
   o  Packages generally attached in position 4, to avoid masking objects in Rcmdr and car.
   
   o  Added optional pairwise p-values to correlations dialog (several requests).
   
   o  Small changes.
   